--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "swiper": "^11.0.6"
   },
