--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
